[gd_scene load_steps=2 format=3 uid="uid://djv3ogfl1v12h"]

[ext_resource type="Script" uid="uid://j6vx2f1uwjib" path="res://scripts/settings.gd" id="1_5p8wc"]

[node name="Settings" type="CanvasLayer"]
script = ExtResource("1_5p8wc")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.16862746, 0.22745098, 0.38431373, 1)

[node name="SettingsContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -96.5
offset_right = 120.0
offset_bottom = 96.5
grow_horizontal = 2
grow_vertical = 2

[node name="KeyMoveUp" type="HBoxContainer" parent="SettingsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsContainer/KeyMoveUp"]
layout_mode = 2
text = "Move up"

[node name="Button" type="Button" parent="SettingsContainer/KeyMoveUp"]
layout_mode = 2

[node name="KeyMoveDown" type="HBoxContainer" parent="SettingsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsContainer/KeyMoveDown"]
layout_mode = 2
text = "Move down"

[node name="Button" type="Button" parent="SettingsContainer/KeyMoveDown"]
layout_mode = 2

[node name="KeyMoveLeft" type="HBoxContainer" parent="SettingsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsContainer/KeyMoveLeft"]
layout_mode = 2
text = "Move left"

[node name="Button" type="Button" parent="SettingsContainer/KeyMoveLeft"]
layout_mode = 2

[node name="KeyMoveRight" type="HBoxContainer" parent="SettingsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsContainer/KeyMoveRight"]
layout_mode = 2
text = "Move right"

[node name="Button" type="Button" parent="SettingsContainer/KeyMoveRight"]
layout_mode = 2

[node name="KeyFocus" type="HBoxContainer" parent="SettingsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsContainer/KeyFocus"]
layout_mode = 2
text = "Focus"

[node name="Button" type="Button" parent="SettingsContainer/KeyFocus"]
layout_mode = 2

[node name="KeyPause" type="HBoxContainer" parent="SettingsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsContainer/KeyPause"]
layout_mode = 2
text = "Pause"

[node name="Button" type="Button" parent="SettingsContainer/KeyPause"]
layout_mode = 2

[node name="Back" type="Button" parent="SettingsContainer"]
layout_mode = 2
text = "Back"
